tests/snapshots/cli_snapshots__minimal_valid_check.snap
---
source: tests/cli_snapshots.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl check
Checked:
  1 RFCs
  1 clauses
  0 ADRs
  1 work items

warning[W0104]: Skipped ADR (parse error): Invalid TOML: TOML parse error at line 2, column 10
  |
2 | schema = "adr"
  |          ^^^^^
invalid type: string "adr", expected u32
 (gov/adr/ADR-XXXX-test-decision.toml)
warning[W0108]: Work item 'WI-<DATE>-001' has placeholder or empty description (gov/work/<DATE>-test-work-item.toml)
exit: 0
