tests/snapshots/cli_snapshots__minimal_valid_list_adr.snap
---
source: tests/cli_snapshots.rs
expression: output
---
$ govctl list adr
┌──────────┬──────────┬────────────┬───────────────┐
│ ADR      ┆ Status   ┆ Date       ┆ Title         │
╞══════════╪══════════╪════════════╪═══════════════╡
│ ADR-0001 ┆ accepted ┆ 2026-01-01 ┆ Test Decision │
└──────────┴──────────┴────────────┴───────────────┘
exit: 0
