tests/snapshots/cli_snapshots__minimal_valid_list_rfc.snap
---
source: tests/cli_snapshots.rs
expression: output
---
$ govctl list rfc
┌──────────┬─────────┬───────────┬────────┬──────────┐
│ RFC      ┆ Version ┆ Status    ┆ Phase  ┆ Title    │
╞══════════╪═════════╪═══════════╪════════╪══════════╡
│ RFC-0001 ┆ 1.0.0   ┆ normative ┆ stable ┆ Test RFC │
└──────────┴─────────┴───────────┴────────┴──────────┘
exit: 0
