tests/snapshots/cli_snapshots__minimal_valid_list_work.snap
---
source: tests/cli_snapshots.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl list work
┌───────────────────┬────────┬────────────────┐
│ ID                ┆ Status ┆ Title          │
╞═══════════════════╪════════╪════════════════╡
│ WI-<DATE>-001 ┆ active ┆ Test work item │
└───────────────────┴────────┴────────────────┘
exit: 0
