tests/snapshots/cli_snapshots__minimal_valid_status.snap
---
source: tests/cli_snapshots.rs
expression: output
---
$ govctl status
govctl status

RFCs
  normative    1
  Total        1

Clauses
  active       1
  Total        1

ADRs
  accepted     1
  Total        1

Work Items
  done         1
  Total        1

exit: 0
