tests/snapshots/cli_snapshots__source_scan_detects_refs.snap
---
source: tests/cli_snapshots.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl check
Checked:
  1 RFCs
  1 clauses
  0 ADRs
  0 work items

✓ All checks passed
exit: 0
